mekview updates for infantry